[project]
name = "daily"
version = "0.1.0"
description = "daily coding"
authors = [
    {name = "yuuu14",email = "yu.xiao.14@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
