[project]
name = "daily"
version = "0.1.0"
description = "daily coding"
authors = [
    {name = "yuuu14",email = "yu.xiao.14@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "ollama (>=0.4.7,<0.5.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
jupyter-server-proxy = "^4.4.0"
dask-labextension = "^7.0.0"
nbserverproxy = "^0.8.8"
jupyterlab-widgets = "^3.0.13"

